Fix header image going on a new Lines
Fixed the header image going on a new line
and getting too large when zooming out.

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,16 @@
     color: rgb(216, 226, 235);
 }
 
+.hero-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.right {
+    margin: auto 0 auto auto;
+    text-align: end;
+}
+
 .header {
     display: flex;
     align-items: center;
@@ -25,11 +35,6 @@ ul {
 
 .logo {
     width: 50px;
-}
-
-.content {
-    display: flex;
-    gap: 48px;
 }
 
 .right img {
@@ -51,10 +56,6 @@ h1 {
     margin: 0;
 }
 
-.right {
-    text-align: end;
-}
-
 #btn-1 {
     background-color: #3882f6;
     border: none;
@@ -71,6 +72,7 @@ h1 {
     display: flex;
     flex-direction: column;
     text-align: center;
+    gap: 48px;
 }
 
 .block-container {
@@ -144,4 +146,9 @@ h1 {
     text-align: center;
     padding: 1em;
     margin-top: 3em;
+}
+
+.product {
+    max-width: 18em;
+    max-height: 6em;
 }
